# Spotydash

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sample_dot_env
docker/: Dockerfile  control_docker.sh  docker-compose.yaml
docker/entrypoints/: start_airflow_webserver.sh  start_mlflow_server.sh  start_mlflow_ui.sh  start_superset.sh
docker/pg-init-scripts/: create-multiple-postgresql-databases.sh
spotydash/: cfg.py  clustering.py  constants.py  etfl_artists_data.py  etl_songs_data.py  extract.py  helpers.py  load.py  models.py  plot.py  schemas.py  transform.py  validate_schemas.py
spotydash/alembic/: env.py
spotydash/dags/: common_args.py  etfl_artists_dag.py  etl_songs_dag.py
spotydash/resources/data/: audio_features.pickle  current_songs.pickle  ids.pickle  kmeans_model.pkl  playlists.pickle  transformed_artists_data.csv  transformed_songs_data.csv
spotydash/tests/: conftest.py  test_dag_validation.py
superset/: superset_config.py
superset/dashboards/: dashboard.json
superset/datasources/: datasources.yaml
